--- a/react-project/package.json
+++ b/react-project/package.json
@@ -27,7 +27,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -37,6 +38,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.9.0",
+    "sass-embedded": "^1.80.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
